# robustidps.ai

./: .env.example  .gitignore  .zenodo.json  CITATION.cff  CODEBASE_ANALYSIS.md  README.md  SCALING_AND_DESKTOP_ANALYSIS.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile.gpu  Dockerfile.prod  ablation.py  audit.py  auth.py  batch_inference.py  benchmark.py  config.py  continual.py  copilot.py  create_alt_weights.py  create_clrl_weights.py  create_weights.py  database.py  datasets.py  demo_cache.py  drift_detection.py  experiments.py  explainability.py  features.py  federated.py  firewall.py  ingestion.py  llm_attacks.py  llm_attacks_seg2.py  main.py  pq_crypto.py  prevention.py  pytest.ini  redis_cache.py  redteam.py  reports.py  requirements.txt  sessions.py  siem_connectors.py  supply_chain.py  task_queue.py  threat_response.py  uncertainty.py  workspaces.py  (+1 more)
deploy/: deploy.sh  generate-ssl.sh  nginx.conf  setup-cloudflare-tunnel.sh  setup-server.sh
docs/: IP_ANALYSIS_AND_COMPETITIVE_COMPARISON.md  research_proposal.tex  robustidps_documentation.tex
frontend/: Dockerfile  Dockerfile.prod  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
multi-agent-pqc-models/: .gitignore  CITATION.cff  README.md  requirements.txt  setup.py
papers/: ch3_validation_seg1.tex  ch3_validation_seg2.tex  chapter3_concluding_validation.tex  p1_seg1.tex  p1_seg2.tex  p1_seg3.tex  p2_seg1.tex  p2_seg2.tex  p2_seg3.tex  paper1_robust_ids_clrl.tex  (+4 more)
sdk/: pyproject.toml
sdk/robustidps/: __init__.py  cli.py  client.py
(+156 files in other folders)
