[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robustidps"
version = "0.1.0"
description = "Python SDK & CLI for RobustIDPS.AI — intrusion detection research platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25",
    "click>=8.0",
    "rich>=13.0",
    "tabulate>=0.9",
]

[project.scripts]
robustidps = "robustidps.cli:main"

[project.optional-dependencies]
jupyter = ["ipywidgets>=8.0"]
dev = ["pytest", "pytest-httpx"]

[tool.setuptools.packages.find]
include = ["robustidps*"]
